--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.5.5",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/eslint": "^8.56.7",
-    "autoprefixer": "^10.4.16",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/eslint": "^8.56.9",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.0.0",
-    "eslint-plugin-svelte": "^2.36.0",
+    "eslint-plugin-svelte": "^2.37.0",
     "globals": "^15.0.0",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.3.6",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^7.5.0",
-    "vite": "^5.0.3"
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^5.0.3",
+    "svelte": "^4.2.14",
+    "svelte-check": "^3.6.9",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.6.0",
+    "vite": "^5.2.8"
   },
   "type": "module"
 }
